# LLM-systems-intro

./: .gitignore  LLM.ipynb  RAG.ipynb  README.md  main.py  pyproject.toml  test.ipynb
notebooks/: Finetuning.ipynb  LLM Inference.ipynb  LLM.ipynb  RAG.ipynb  finetuning.ipynb  kahneman_chunks.pkl
notebooks/data/: kahneman_chunks.json
notebooks/data/chroma_langchain_db/: chroma.sqlite3
