[project]
name = "llm-systems-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.1.2",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers>=4.52.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
